--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="container-background">
-        <video loop muted autoplay src="/Assets/Background-video.mp4"></video>
+        <img src="Assets/background1.jpg" alt="">
     </div>
 
     <div class="container-main">
