--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     KNOWS NO BOUNDS. COME, LET'S FORGE A NEW DAWN TOGETHER.</p>
             </div>
         </div>
-        <div class="container-page3">
+        <div class="container-page3" id="Videos">
             <div class="container-panel2">
                 <h1>SMP Videos</h1>
                 <div class="container-video">
